--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,9 +1,7 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:prettier/recommended"
-  ],
+  "extends": "next",
   "rules": {
-    "prettier/prettier": "error"
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
